[package]
name = "zst"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
the_assoc_ty_ext = "0.1.0"
const_trait_impl = { version = "0.1.1" }
remove_macro_call = { version = "0.1.1" }
const_fn = { version = "0.4.9", optional = true }

[build-dependencies]
cfg_aliases = "0.1.1"

[features]
const_trait_impl = []
const_default_impls = ["const_fn"]
const_fn_trait_bound = []